add a Structure and a litel bet style !!!

--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="style/">
+    <link type="text/css" rel="stylesheet" href="style/Style.css">
     <script src="App/Main.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>StickyNote</title>
 </head>
 <body>
     <div id="root-div" class="root-div">
         <div class="head-section">
+            <div class="head-section">
+                <button class="add-new-note-button">
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                <div class="user-profile-image">
+                    
+                </div>
+                <button class="settings-button">
+                    <i class="bi bi-gear"></i>
+                </button>
+            </div>
+        </div>
+        <div class="app-name-section">
+            <h3 class="app-name-tag">
+                Sticky Notes
+            </h3>
+        </div>
+        <div calss="search-section">
+            <input class="input-fild">
+            <button class="search-button">
+            </button>
 
         </div>
 
