--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
 </head>
 <body>
     <div id="root-div" class="root-div">
+        <div class="settings-section">
+            <div class="setting-head">
+                <button class="back-button">
+                    <i class="bi bi-arrow-left"></i>
+                </button>
+                <h3>
+                    SETTING
+                </h3>
+            </div>
+
+        </div>
         <div class="head-section">
             <div class="head-section">
                 <button class="add-new-note-button">
                     <i class="bi bi-plus-lg"></i>
                 </button>
                 <div class="user-profile-image">
+                    <div class="image-holder">
                     
+                    </div>
                 </div>
                 <button class="settings-button">
                     <i class="bi bi-gear"></i>
@@ -29,11 +42,11 @@
                 Sticky Notes
             </h3>
         </div>
-        <div calss="search-section">
-            <input class="input-fild">
+        <div class="search-section">
+            <input class="input-fild" type="text" placeholder="search.....">
             <button class="search-button">
+             <i class="bi bi-search"></i>
             </button>
-
         </div>
 
     </div>
