a litel bet improvement and style to setting section

--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
                 <button class="back-button">
                     <i class="bi bi-arrow-left"></i>
                 </button>
-                <h3>
+                <h3 class="section-name">
                     SETTING
                 </h3>
+                <button class="close-button">
+                    <i class="bi bi-x"></i>
+                </button>
             </div>
+            <div class="sing-section">
+                <p class="sing-text">
+                    sing in to sync your notes to the cloud.
+                </p>
+                <a href="...." class="sing-link">SING IN</a>
+            </div>
+            <div class="general-section">
 
+            </div>
+    
         </div>
         <div class="head-section">
             <div class="head-section">
