--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 </head>
 <body>
     <div id="root-div" class="root-div">
+        <div class="add-new-note-section">
+            <div class="add-new-head-section">
+                <button class="add-another-note-bt">
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                <button class="option-button">
+                    <i class="bi bi-three-dots"></i>
+                </button>
+                <button class="close-button">
+                    <i class="bi bi-x"></i>
+                </button>
+            </div>
+
+        </div>
         <div class="settings-section">
             <div class="setting-head">
                 <button class="back-button">
