--- a/index.html
+++ b/index.html
@@ -23,6 +23,32 @@
                     <i class="bi bi-x"></i>
                 </button>
             </div>
+            <div class="input-fild">
+                <textarea class="get-note" placeholder="Take a note...." >
+
+                </textarea>
+
+            </div>
+            <div class="option-section">
+                <button class="bold-button">
+                    <i class="bi bi-type-bold"></i>
+                </button>
+                <button class="italic-button">
+                    <i class="bi bi-type-italic"></i>
+                </button>
+                <button class="under-line-button">
+                    <i class="bi bi-type-underline"></i>
+                </button>
+                <button class="list-button">
+                    <i class="bi bi-list-ul"></i>
+                </button>
+                <button class="add-image-button">
+                    <i class="bi bi-image-fill"></i>
+                </button>
+                <button class="add-voice">
+                    <i class="bi bi-mic"></i>
+                </button>
+            </div>
 
         </div>
         <div class="settings-section">
@@ -73,7 +99,36 @@
             <button class="search-button">
              <i class="bi bi-search"></i>
             </button>
-        </div>
+      <!--  </div>
+        <div class="note-holder">
+            <ul class="ul-test">
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+                <li class="il-test">
+                    ssss
+                </li>
+            </ul>
+
+        </div>-->
 
     </div>
 </body>
