improvement in setting section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
                 <a href="...." class="sing-link">SING IN</a>
             </div>
             <div class="general-section">
+                <p class="section-name">
+                    General
+                </p>
+            </div>
+            <div class="color-theme-section">
+                <p class="color-section-name">
+                    Colour
+                </p>
+            </div>
+            <div class="about-me-section">
+                <p class="about-section-name">
+                    About Me
+                </p>
 
             </div>
     
