add and improvement in about me section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p class="sing-text">
                     sing in to sync your notes to the cloud.
                 </p>
-                <a href="...." class="sing-link">SING IN</a>
+                <a href="http://127.0.0.1:5500/StickyNote/CreateAccount.html" class="sing-link">SING IN</a>
             </div>
             <div class="general-section">
                 <p class="section-name">
@@ -78,11 +78,27 @@
                 <p class="color-section-name">
                     Colour
                 </p>
+                
             </div>
             <div class="about-me-section">
                 <p class="about-section-name">
                     About Me
                 </p>
+                <a href="https://github.com/Alinaderkurdi">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a>
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a>
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="https://stackoverflow.com/users/21900511/ali-naderkurdi">
+                    <i class="bi bi-stack-overflow"></i>
+                </a>
+                <a >
+                    <i class="bi bi-envelope"></i>
+                </a>
 
             </div>
     
