add another html file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </button>
             </div>
             <div class="input-fild">
-                <textarea class="get-note" placeholder="Take a note...." >
+                <textarea class="get-note" placeholder="Take a note...." autocomplete="on" rows="10" cols='50' >
 
                 </textarea>
 
