complet the note holder section with static note !

--- a/index.html
+++ b/index.html
@@ -128,36 +128,83 @@
             <button class="search-button">
              <i class="bi bi-search"></i>
             </button>
-      <!--  </div>
-        <div class="note-holder">
-            <ul class="ul-test">
-                <li class="il-test">
-                    ssss
+        </div>
+        <div class="note-holder-section">
+            <ul class="note-holder">
+                <li class="singel-note">
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style='height: 60px; background-color: #FFF7D1;'>
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content" >
+                        No Content !
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note">
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style='height: 150px; background-color: #FFF7D1;'>
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style="height: 200px; background-color: #F3F2F1;">
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style="height: 200px; background-color: #F3F2F1;">
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style="height: 200px; background-color: #F3F2F1;">
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content">
+                        hell world
+                    </p>
                 </li>
-                <li class="il-test">
-                    ssss
+                <li class="singel-note" style='height: 60px; background-color: #FFF7D1;'>
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content" >
+                        No Content !
+                    </p>
+                </li>
+                <li class="singel-note" style='height: 60px; background-color: #FFF7D1;'>
+                    <p class="note-date">
+                        22:22
+                    </p>
+                    <p class="content" >
+                        No Content !
+                    </p>
                 </li>
             </ul>
-
-        </div>-->
+        </div>
 
     </div>
 </body>
