complet the general section !

--- a/index.html
+++ b/index.html
@@ -73,11 +73,29 @@
                 <p class="section-name">
                     General
                 </p>
+                <label>Enable insights</label>
+                <input type="checkbox" class="toggle" checked >
+                <label>Confirm before deleting</label>
+                <input type="checkbox" class="toggle" checked >
             </div>
             <div class="color-theme-section">
                 <p class="color-section-name">
                     Colour
                 </p>
+                <div>
+                    <label class="radio">
+                        <input type="radio" name="r" value="1" checked>
+                        <span>Radio #1</span>
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="r" value="2">
+                        <span>Radio #2</span>
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="r" value="3">
+                        <span>Radio #3</span>
+                    </label>
+                </div>
                 
             </div>
             <div class="about-me-section">
@@ -205,7 +223,6 @@
                 </li>
             </ul>
         </div>
-
     </div>
 </body>
 </html>
