complet the color section

--- a/index.html
+++ b/index.html
@@ -82,21 +82,20 @@
                 <p class="color-section-name">
                     Colour
                 </p>
-                <div>
+                <div id="test" class="radio-contaner">
                     <label class="radio">
-                        <input type="radio" name="r" value="1" checked>
-                        <span>Radio #1</span>
+                        <input type="radio" name="r" value="light" checked>
+                        <span>Light</span>
                     </label>
                     <label class="radio">
-                        <input type="radio" name="r" value="2">
-                        <span>Radio #2</span>
+                        <input type="radio" name="r" value="dark">
+                        <span>Dark</span>
                     </label>
                     <label class="radio">
-                        <input type="radio" name="r" value="3">
-                        <span>Radio #3</span>
+                        <input type="radio" name="r" value="dynamic">
+                        <span>Dynamic</span>
                     </label>
                 </div>
-                
             </div>
             <div class="about-me-section">
                 <p class="about-section-name">
