add strucher to sing up page

--- a/CreateAccount.html
+++ b/CreateAccount.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RejesterPage</title>
+    <link type="text/css" rel="stylesheet" href="style/SingUp.css">
 </head>
 <body>
-    <p>
-        add a new account1
-    </p>
+    <div id="root-div">
+        <div class="get-user-info-box" >
+            <div class="add-user-profile">
+                <div class="image-holder">
+
+                </div>
+
+            </div>
+            <div class="input-fild-contaner">
+                <label>who can i call you</label>
+                <input type="text" class="get-use">
+                <label>Add your emali</label>
+                <input type="text">
+                <label>chose a password</label>
+                <input type="text">
+                <label>chose a password</label>
+                <input type="text">
+                <button class="create-new-account-bt">
+                    Create account
+                </button>
+            </div>
+
+        </div>
+
+    </div>
 </body>
 </html>
