create delete box

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 </head>
 <body>
     <div id="root-div" class="root-div">
+        <div class="delete-box">
+            <p class="text-box">
+               Do you want delete this note
+            </p>
+            <input type="checkbox">
+            <label>
+                Don't ask me again
+            </label>
+            <div class="button-box">
+               <button class="delete-bt">
+                DELETE
+               </button>
+               <button class="keep-button">
+                 KEEP
+               </button>
+            </div>
+        </div>
         <div class="add-new-note-section">
             <div class="add-new-head-section">
                 <button class="add-another-note-bt">
@@ -69,6 +86,7 @@
                 </p>
                 <a href="http://127.0.0.1:5500/StickyNote/CreateAccount.html" class="sing-link">SING IN</a>
             </div>
+            <hr>
             <div class="general-section">
                 <p class="section-name">
                     General
@@ -78,6 +96,7 @@
                 <label>Confirm before deleting</label>
                 <input type="checkbox" class="toggle" checked >
             </div>
+            <hr>
             <div class="color-theme-section">
                 <p class="color-section-name">
                     Colour
@@ -97,6 +116,7 @@
                     </label>
                 </div>
             </div>
+            <hr>
             <div class="about-me-section">
                 <p class="about-section-name">
                     About Me
@@ -118,7 +138,6 @@
                 </a>
 
             </div>
-    
         </div>
         <div class="head-section">
             <div class="head-section">
