add some utility functions and create peoject folder structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <title>StickyNote</title>
 </head>
 <body>
+    <div class="root" id="root">
+     
+    </div>
+ <!--
     <div id="root-div" class="root-div">
+    -->
+    
+      <!--
         <div class="delete-box">
             <p class="text-box">
                Do you want delete this note
@@ -33,6 +40,8 @@
                </button>
             </div>
         </div>
+    -->
+    <!--
         <div class="add-new-note-section" id="note-test">
             <div class="drop-down-section">
                 <div class="note-color-section" id="color-button-note-bk">
@@ -185,6 +194,8 @@
 
             </div>
         </div>
+    -->
+<!--
         <div class="head-section">
             <div class="head-section">
                 <button class="add-new-note-button">
@@ -200,17 +211,14 @@
                 </button>
             </div>
         </div>
-        <div class="app-name-section">
-            <h3 class="app-name-tag">
-                Sticky Notes
-            </h3>
-        </div>
         <div class="search-section">
             <input class="input-fild" type="text" placeholder="search.....">
             <button class="search-button">
              <i class="bi bi-search"></i>
             </button>
         </div>
+    -->
+<!--
         <div class="note-holder-section">
             <ul class="note-holder">
                 <li class="singel-note">
@@ -224,5 +232,6 @@
             </ul>
         </div>
     </div>
+-->
 </body>
 </html>
